--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.0",
     "autoprefixer": "^10.4.14",
     "bcrypt": "^5.1.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "express": "^4.18.2",
     "flow": "^0.2.3",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
@@ -21,10 +21,21 @@
     "next": "13.4.6",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.24",
-    "prisma": "^4.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.7.1",
+    "socket.io-client": "^4.7.1",
     "tailwindcss": "^3.3.2",
     "uninstall": "^0.0.0"
+  },
+  "devDependencies": {
+    "@prisma/client": "^4.16.1",
+    "i": "^0.3.7",
+    "npm": "^9.7.2",
+    "prisma": "^4.16.1"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
