--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 NEXTAUTH_SECRET=lokjdhfjkksdhfkkjhk
-NEXTAUTH_URL=http://localhost:3000
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/messengerclone"
+NEXTAUTH_URL=https://thearyansingh.me
+
+DATABASE_URL="postgres://s.aryan0327:zJVOv9hiYS4l@ep-rapid-firefly-917174.us-east-1.aws.neon.tech/messengerclone"
 
 SECRET_KEY=hsagdhjadsgjhfgajkadjgfjadksgdfasdasdasadsdasdaadddaadads
